Make pace more readable by using fixed width numbers

--- a/static_assets/styles/club/event.css
+++ b/static_assets/styles/club/event.css
@@ -167,3 +167,8 @@ img.emoji {
   margin: 0 0.05em 0 0.1em;
   vertical-align: -0.2em;
 }
+
+.speedometer {
+  font-feature-settings: "tnum";
+  font-variant-numeric: tabular-nums;
+}
